--- a/package.json
+++ b/package.json
@@ -52,6 +52,12 @@
     "@rollup/plugin-replace": "^3.0.0",
     "@vue/compiler-sfc": "^3.1.5",
     "@vue/eslint-config-standard": "^6.1.0",
+    "@vuepress/bundler-vite": "^2.0.0-rc.23",
+    "@vuepress/client": "^2.0.0-rc.23",
+    "@vuepress/plugin-back-to-top": "^2.0.0-rc.105",
+    "@vuepress/plugin-medium-zoom": "^2.0.0-rc.105",
+    "@vuepress/plugin-register-components": "^2.0.0-rc.103",
+    "@vuepress/theme-default": "^2.0.0-rc.23",
     "autoprefixer": "^9.0.0",
     "babel-eslint": "^10.1.0",
     "commitizen": "^4.2.4",
@@ -74,9 +80,10 @@
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "^6.0.0",
+    "sass-embedded": "^1.89.0",
     "serve": "^12.0.0",
     "vue": "^3.2.45",
-    "vuepress": "^1.9.7"
+    "vuepress": "2.0.0-rc.23"
   },
   "keywords": [
     "vue",
