--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -13,5 +13,5 @@ jobs:
         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         TARGET_REPO: haiweilian/vue-magnifier-plus
         TARGET_BRANCH: gh-pages
-        BUILD_SCRIPT: yarn && yarn docs:build
+        BUILD_SCRIPT: npm install && npm run docs:build
         BUILD_DIR: docs/.vuepress/dist
